--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-scripts": "3.4.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "redux-logger": "^3.0.6",
     "thunk": "0.0.1"
   },
   "scripts": {
